--- a/src/components/image-box/ImageBox.scss
+++ b/src/components/image-box/ImageBox.scss
@@ -69,6 +69,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 10;
     opacity: 25%;
     width: 100%;
     height: 100%;
