--- a/src/components/lightbox/Lightbox.scss
+++ b/src/components/lightbox/Lightbox.scss
@@ -24,7 +24,7 @@
   top: 0;
   right: 0;
   left: 0;
-  z-index: 1100;
+  z-index: 100;
   width: 100%;
   height: 100%;
   background-color: rgba($gray-5, 0.5);
@@ -55,7 +55,7 @@
     position: absolute;
     top: 2em;
     right: 4em;
-    z-index: 1200;
+    z-index: 110;
     width: 1.25em;
 
     svg {
